# SmartSpeakDemo

./: README.md  Readme.txt  alexa_parser.py  clock.py  demo_main.py  dueros_parser.py  get_data.py  iflytek_parser.py  scroll_list_widget.py  startdemo_amazon_alexa.sh  startdemo_dueros.sh  startdemo_google_assistant_library.sh  startdemo_google_assistant_service.sh  startdemo_iflytek.sh  utils.py  weather.py
Amazon_Alexa/: AlexaClientSDKConfig.json  AuthServer.py
Amazon_Alexa/avs-sdk-folder/: pi.sh  setup.sh  startauth.sh  startsample.sh  test.sh
Amazon_Alexa/avs-sdk-folder/db/: alerts.db  notifications.db
Amazon_Alexa/avs-sdk-folder/tpv/: 1_make.sh  2_auth.sh  3_start.sh  AlexaClientSDKConfig.json  config.txt
Amazon_Alexa/db/: certifiedSender.db  settings.db
Amazon_Alexa/models/: spot-alexa-rpi-31000.snsr
Google_Assistant_Library/: hotword.py
Google_Assistant_Service/: assistant.py  gassistant.py  globalmodule.py
Google_Assistant_Service/breakdonw/: assistant.py_break  assistant.py_import snowboy  gassistant.py_break
Google_Assistant_Service/helpers/: audio_helpers.py
Google_Assistant_Service/snowboy/: snowboydecoder.py  snowboydecoder.py_pyaudio
Iflytek/: wordlist.txt
Iflytek/include/: cJSON.h  ifly.h  ifly_cjson.h  ifly_rapidjson.h
Iflytek/samples/aiui_sample/: readme.txt
Iflytek/samples/aiui_sample/src/: AIUITest.cpp  AIUITest.h  FileUtil.cpp
Iflytek/samples/asr_record_sample/: asr_record_sample.c
Iflytek/samples/asr_sample/: asr_sample.c
Iflytek/samples/awaken_sample/: 64bit_make.sh  Makefile  awaken_sample.c
Iflytek/samples/fifo_read/: fifo_read.c
Iflytek/samples/iat_record_sample/: iat_record_sample.c
Iflytek/samples/iat_sample/: iat_sample.c
Iflytek/samples/ise_sample/: ise_sample.c
Iflytek/samples/sch_speak_sample/: sch_speak_sample.c
Iflytek/samples/sch_text_sample/: sch_text_sample.c
Iflytek/samples/tts_sample/: tts_sample.c
Iflytek/samples/voice_control/: Makefile  arm_make.sh  x64_make.sh
Iflytek/samples/voice_control/src.bak.0417/: main.c  voice.c  voice.h
Iflytek/samples/voice_control/src.bak.0418/: main.c  voice.c  voice.h
Iflytek/simon/: CMakeLists.txt  tags
Iflytek/simon/SampleApp/: CMakeLists.txt
Iflytek/simon/SampleApp/src/: main.c  (+2 more)
Iflytek/simon/ifly/: CMakeLists.txt
Iflytek/simon/ifly/include/: cJSON.h  ifly_rapidjson.h
Iflytek/simon/ifly/include/rapidjson/: schema.h
Iflytek/simon/ifly/src/: CMakeLists.txt  cJSON.c  ifly.c.bak  ifly.cpp
dcs-sdk-js/: README.md  alerts.json  config.js  dcs_config.js  dcs_controller.js  dcs_protocol.js  format.sh  get_access_token.js  index.js  package.json  recorder.pcm  storage.json  update_state.js
dcs-sdk-js/data_link/: avs_client.js  dcs_and_avs_contexts.js  dcs_and_avs_directives.js  dcs_and_avs_events.js  dcs_client.js  downstream.js  downstream2.js  downstream_auto.js  downstream_h1.js  request_auto.js
dcs-sdk-js/dcs_config_example/: dcs_config.js.avs  dcs_config.js.example  dcs_config.js.mac  dcs_config.js.pi
dcs-sdk-js/device_module/: alert_manager.js  audio_player_manager.js  base_manager.js  http_manager.js  location_manager.js  screen_manager.js  speaker_manager.js  voice_input_manager.js  voice_output_manager.js
dcs-sdk-js/device_module/system_impl/: data_stream_player.js  mplayer_proxy.js  player.js  recorder.js
dcs-sdk-js/function_test/: audio_player_manager.js  index.js  package.json
dcs-sdk-js/lib/: buffermanager.js  system.js
dcs-sdk-js/snowboy/: README.md  binding.gyp  package.json  snowboy.js  tsconfig.json
dcs-sdk-js/snowboy/include/: snowboy-detect.h
dcs-sdk-js/test_scripts/: dcs_get_directives.sh  retest.sh  snowboy_test.js  test_downstream.js
msc/783cfd9576e4045217f92dbf05f19070/: cfg.ldata
(+52 files in other folders)
